fix label align together with #11891

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1307,3 +1307,7 @@ i.icon.centerlock {
 .ui.secondary.pointing.menu .item {
     padding: 12px;
 }
+
+.ui.header > .ui.label.compact {
+    margin-top: inherit;
+}
