--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -14,6 +14,10 @@
             font-weight: 400;
             font-size: 1.5rem;
 
+            .label {
+                vertical-align: middle;
+            }
+
             &.repo-title .repo-header-icon {
                 display: inline-block;
                 position: relative;
